# BIL142_PROJECT-G-

./: CMakeLists.txt  README.md  main.cpp
inc/: abandoned_planet.h  asteroid_belt.h  event.h  normal_ship.h  quick_ship.h  ship.h  space_pirates.h  strong_ship.h
src/: abandoned_planet.cpp  asteroid_belt.cpp  event.cpp  normal_ship.cpp  quick_ship.cpp  ship.cpp  space_pirates.cpp  strong_ship.cpp
